Overflow handling on floats in table cells to mimimize IE issues

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -317,6 +317,9 @@ td.error input, td.error select {
 /* schedule styling */
 
 /* cell contents */
+#schedule .course, #schedule .room, #schedule .type {
+	overflow: hidden;
+}
 #schedule .course {
 	float: left;
 }
